--- a/src/assets/utils.scss
+++ b/src/assets/utils.scss
@@ -53,3 +53,20 @@ $kakao-button-height: 40px;
         cursor: pointer;
     }
 }
+
+@mixin loading {
+    width: 100%;
+    height: 100%;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    z-index: 300;
+
+    background-color: #ffffff;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
