--- a/src/assets/utils.scss
+++ b/src/assets/utils.scss
@@ -1,3 +1,9 @@
+@mixin mobile {
+    @media (max-width: 1080px) {
+        @content;
+    }
+}
+
 @mixin setCenter {
     margin-left: auto;
     margin-right: auto;
@@ -70,3 +76,4 @@ $kakao-button-height: 40px;
     justify-content: center;
     align-items: center;
 }
+
