--- a/src/assets/utils.scss
+++ b/src/assets/utils.scss
@@ -43,12 +43,9 @@ $button-width: 240px;
 }
 
 // login & join kakaoButton
-$kakao-button-width: 180px;
-$kakao-button-height: 40px;
-
 @mixin kakaoButton {
-    width: $kakao-button-width;
-    height: $kakao-button-height;
+    width: 180px;
+    height: 40px;
 
     background-image: url("@/assets/kakao_login_medium.png");
     background-size: cover;
@@ -76,4 +73,3 @@ $kakao-button-height: 40px;
     justify-content: center;
     align-items: center;
 }
-
