Revert "kakaobutton width, height 변수 제거"
This reverts commit 743c98a973a5ddcb3975ef0d0a8e85bf9a207225.

--- a/src/assets/utils.scss
+++ b/src/assets/utils.scss
@@ -43,9 +43,12 @@ $button-width: 240px;
 }
 
 // login & join kakaoButton
+$kakao-button-width: 180px;
+$kakao-button-height: 40px;
+
 @mixin kakaoButton {
-    width: 180px;
-    height: 40px;
+    width: $kakao-button-width;
+    height: $kakao-button-height;
 
     background-image: url("@/assets/kakao_login_medium.png");
     background-size: cover;
@@ -73,3 +76,4 @@ $button-width: 240px;
     justify-content: center;
     align-items: center;
 }
+
