--- a/src/assets/utils.scss
+++ b/src/assets/utils.scss
@@ -19,10 +19,8 @@
 
 //login & join button
 
-$button-width: 240px;
-
 @mixin authButton {
-    min-width: $button-width;
+    min-width: 240px;
 
     margin-top: 30px;
 
@@ -55,21 +53,4 @@ $button-width: 240px;
     &:hover {
         cursor: pointer;
     }
-}
-
-@mixin loading {
-    width: 100%;
-    height: 100%;
-
-    position: fixed;
-    top: 0;
-    left: 0;
-
-    z-index: 300;
-
-    background-color: #ffffff;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
